src/test/NestedClasses2/NestedClasses2.expected
error: NestedClasses2.panda:10:4: cannot call instance method 'a' belonging to class 'A' on an instance of 'A.B'
error: NestedClasses2.panda:11:22: cannot reference instance field 'foo' belonging to class 'A' from an instance of 'A.B'
2 errors
