src/test/NestedClasses2/NestedClasses2.panda
class A {
	def foo := 12

	method a() {
		Console.writeLine("a!")
	}

	class B {
		method b() {
			a()
			Console.writeLine(foo)
		}
	}
}

A.B().b()